<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LocalKTV</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play\n\nPause\n</string>
    <string name="Cut">Next</string>
    <string name="restart">\nRepeat\n</string>
    <string name="SelectList">Select</string>
 	<string name="accompany">Original\nAccompany</string>
    <string name="next">Next Song:\t\t</string>
    <string name="current">Current Song:</string>
    <string name="inputKey">Key，singer or song name</string>
    <string name="inputsingerKey">Key，singer</string>
    <string name="inputESC">Again according to exit the program</string>
    <string name="addsuccess">Successfully added</string>
    <string name="delsong">Out of success</string>
    <string name="select">operation</string>    
    <string name="AutoModes">The original play</string>  
    <string name="AccompanyModes">Accompany</string>  
    <string name="NoAccompany">Not accompany mode</string>  
    <string name="cancel">NO</string> 
     <string name="confirm">YES</string> 
    <string name="END">NULL</string> 
    <string name="sticky">Sticky</string>     
    <string name="del">Delete</string>  
    <string name="playnow">Play Now</string>  
    <string name="allsong">Allsong"</string>     
    <string name="selectedsong">Selected</string>     
    <string name="search">Search</string>
    <string name="searchlanguage">language</string>
    <string name="searchSinger">Singer</string>             
	<string name="searchNumber">Number</string> 
	<string name="searchStyle">Style</string>       
	<string name="MyRecorder">MyRecorder</string>  	
	<string name="OthersMusic">Others</string>  	
	
	<string name="NationalLanguager">国语歌曲</string> 
	<string name="EnglishLanguager">英语歌曲</string> 
	<string name="Cantonese">粤语歌曲</string> 
	<string name="Taiwanese">台湾歌曲</string>    
	
	
	<string name="Style_popular">流行歌曲</string> 
	<string name="Style_reminiscence">怀旧歌曲</string> 
	<string name="Style_children">儿童歌曲</string> 
	<string name="Style_dance">舞蹈歌曲</string>        
        
</resources>
