<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >    
     	
   <FrameLayout 
    android:id="@+id/surfaceLayout "
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	/>
     <LinearLayout   
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	   	android:layout_marginTop="80dip"
	    android:layout_marginLeft="105dip"
	    android:layout_marginRight="85dip"
	   >
     <SeekBar
        android:id="@+id/SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" 
        android:background="#c0000000"/>
       </LinearLayout>
       
<TableLayout android:id="@+id/TableLayout01" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_centerVertical = "true"
	android:layout_centerHorizontal = "true"
	android:focusable = "true"
	android:background="@drawable/okbg"
	android:visibility="invisible"
	><requestFocus/>
<TableRow android:gravity="center_horizontal|center_vertical"
    
    android:layout_weight="1">    	
<Button
	android:id="@+id/up"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"	
	android:gravity="center"
    android:background="#00000000"
    android:textColor="#1E90FF"
    android:textStyle="bold"
	
	android:text="@string/restart"
	android:focusable = "false"
    />
</TableRow>
<TableRow android:gravity="center_horizontal|center_vertical"
    android:layout_weight="1">    
<Button
    android:id="@+id/left"  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:gravity="center_vertical"
    android:background="#00000000"
    android:textColor="#1E90FF"
    android:textStyle="bold"
    android:text="@string/accompany"	
   style="?android:attr/buttonBarButtonStyle"
   android:focusable = "false"
    />

<Button
	android:id="@+id/play"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:gravity="top|center_horizontal"
    android:background="#00000000"
    android:textColor="#1E90FF"
	android:text="@string/play"	
	android:focusable = "false"
	style="?android:attr/buttonBarButtonStyle"
	></Button>

<Button
	android:id="@+id/right"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 	
	android:gravity="center_vertical|center_horizontal"
    android:background="#00000000"
    android:textColor="#1E90FF"
	android:text="@string/select"
	style="?android:attr/buttonBarButtonStyle"
	android:focusable = "false"
	/>
</TableRow>

<TableRow android:gravity="center_horizontal|center_vertical"
    android:layout_weight="1">   
	
<Button
	android:id="@+id/down"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:gravity="top|center_horizontal"
    android:background="#00000000"
    android:textColor="#1E90FF"
	android:text="@string/Cut"
	android:focusable = "false"
	/>
</TableRow>
</TableLayout>   

  <FrameLayout
	android:id="@+id/HintFragment"		
	android:layout_marginLeft="45dip"	
	android:layout_width="match_parent"		
	android:layout_height="wrap_content"
	android:layout_marginTop="30dip"
	android:focusable = "false"
	android:layout_gravity="left"
	android:background="#00000000"
	android:visibility="gone"
	/>  

 		<FrameLayout
     	android:id="@+id/FrameLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"       
		android:layout_marginBottom="215dp"
		android:background="#c0000000"	
		android:visibility="visible" >		
		
		<FrameLayout		    
	      android:id="@+id/SearchFrameLayout"	          
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"  
		  android:layout_marginTop="10dip"
		  android:layout_marginRight="85dip"		  	 
		  android:layout_gravity="right"
		  android:background="#00000000"	
		  android:visibility="gone"
	     ></FrameLayout>
	 
	 	<ListView
		android:id="@+id/Datalist"	
		android:layout_width="match_parent"		
		android:layout_height="match_parent"
		android:layout_marginTop="14dip"
		android:layout_marginRight="50dip"
		android:layout_marginLeft="125dip"
		android:layout_gravity="left|top"			
		></ListView>
	     
	    <FrameLayout 
		android:id="@+id/ItemFragment"		
		android:layout_width="90dp"		
		
		android:layout_marginLeft="30dip"	
		android:layout_marginTop="20dip"
		android:layout_height="wrap_content" 		
		android:layout_gravity="left"/>
     		     
		<FrameLayout
		android:id="@+id/SideBarlFragment"		
		android:layout_width="24dp"
		android:layout_marginRight="25dip"
		android:layout_marginTop="20dip"
		android:layout_height="match_parent"
		android:layout_gravity="center|right"/>
    	</FrameLayout>
</RelativeLayout>
